// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-alert should render error variant with alert icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="error">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-error" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons-outlined modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        alert
      </i>
    </modus-wc-icon>
    <div>
      <div class="title">
        Custom title
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render info variant with info icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="info">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-info" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons-outlined modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        info
      </i>
    </modus-wc-icon>
    <div>
      <div class="title">
        Custom title
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render success variant with check_circle icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="success">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-success" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        check-circle
      </i>
    </modus-wc-icon>
    <div>
      <div class="title">
        Custom title
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render warning variant with info icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="warning">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-warning" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons-outlined modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        warning
      </i>
    </modus-wc-icon>
    <div>
      <div class="title">
        Custom title
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render with custom props 1`] = `
<modus-wc-alert alert-description="Custom description" alert-title="Custom title" custom-class="test-class" icon="help" variant="info">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-info test-class" role="status">
    <modus-wc-icon custom-class="modus-wc-alert-icon" name="help"></modus-wc-icon>
    <div>
      <div class="title">
        Custom title
      </div>
      <div class="description">
        Custom description
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render with default props 1`] = `
<modus-wc-alert alerttitle="Custom title">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-info" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons-outlined modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        info
      </i>
    </modus-wc-icon>
    <div>
      <div class="title"></div>
    </div>
  </div>
</modus-wc-alert>
`;
